# sandbox-pypfopt

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: 2023_06_16-youtube.py  2023_06_16-zarusd.py  2023_09_07-security_codes.ipynb  2023_09_07-standard_numbers.ipynb  2023_10_18-excel-reformat.py  2023_12_14-pyportfolioopt.py  2024_01_24-yahoo_finance.py  2024_02_16-markdown-notes.py  2024_04_20-raindrop.py  2_2023_06_16-zarusd.py  6_2023_12_14-pyportfolioopt.py  9_2024_04_20-raindrop.py
src/sandbox/: __init__.py
tests/: __init__.py
