[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for random scripts and notebooks."
authors = ["Luke Miloszewski <lukemiloszewski@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukemiloszewski/sandbox"
repository = "https://github.com/lukemiloszewski/sandbox"
packages = [
    { include = "sandbox", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
flake8 = "^4.0.0"
ipykernel = "^6.15.2"
ipython = "^8.4.0"
isort = "^5.10.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
rich = "^12.5.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
