[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for random scripts and notebooks."
authors = ["Luke Miloszewski <lukemiloszewski@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukemiloszewski/sandbox"
repository = "https://github.com/lukemiloszewski/sandbox"
classifiers = [
    "Programming Language :: Python :: 3.10"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
langchain = "^0.1.9"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
pip-system-certs = "^4.0"
pyportfolioopt = "^1.5.5"
python-dotenv = "^1.0.0"
requests = "^2.28.1"
seaborn = "^0.11.2"
SQLAlchemy = "^1.4.40"
yfinance = "^0.2.20"
yt-dlp = "^2023.3.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.2"
ipython = "^8.4.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
rich = "^12.5.1"
ruff = "^0.4.1"

[tool.ruff]
line-length = 100
ignore = [
    "E501",  # line too long, handled by black
    "E731",  # lambda assignment
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["sandbox"]
lines-between-types = 1

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
